--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,11 +12,13 @@
   "author": "",
   "license": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-sslify": "1.2.0",
     "helmet": "6.0.0",
-    "mongodb": "4.12.0"
+    "mongodb": "4.12.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
