--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,11 +17,14 @@
     "express": "^4.18.2",
     "express-sslify": "1.2.0",
     "helmet": "6.0.0",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "4.12.0",
+    "openai": "^3.1.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "@types/express": "^4.17.15",
     "nodemon": "2.0.20",
     "ts-node": "10.9.1",
     "tslint": "6.1.3",
