--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,11 +20,12 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "4.12.0",
     "openai": "^3.1.0",
+    "swagger-ui-express": "^4.6.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.9",
     "@types/express": "^4.17.15",
+    "@types/node": "^18.11.9",
     "nodemon": "2.0.20",
     "ts-node": "10.9.1",
     "tslint": "6.1.3",
