add build and start scripts

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "VIA-image-generator",
   "scripts": {
-    "build": "cd Backend && tsc && npm install && cd .. && cp -a Backend/node_modules/. node_modules && cd Frontend && npm run build ",
+    "build": "npm install && cd Backend && tsc && npm install && cd .. && cp -a Backend/node_modules/. node_modules && cd Frontend && npm run build ",
     "start": "node build/index.js"
   },
   "dependencies": {
