--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,7 +29,6 @@
     "nodemon": "2.0.20",
     "ts-node": "10.9.1",
     "tslint": "6.1.3",
-    "typings": "^2.1.1",
-    "@angular/cli": "~14.0.6"
+    "typings": "^2.1.1"
   }
 }
