--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "VIA-image-generator",
   "scripts": {
-    "build": "npm install && npm install @angular/cli@14.0.6 && cd Backend && tsc && cd .. &&  cd Frontend && npm run build ",
+    "build": "npm install && cd Backend && tsc && cd .. &&  cd Frontend && npm run build ",
     "start": "node build/index.js"
   },
   "dependencies": {
@@ -23,6 +23,10 @@
     "nodemon": "2.0.20",
     "ts-node": "10.9.1",
     "tslint": "6.1.3",
-    "typings": "^2.1.1"
+    "typings": "^2.1.1",
+    "@angular-devkit/build-angular": "^14.0.6",
+    "@angular/cli": "~14.0.6",
+    "@angular/compiler-cli": "^14.0.0",
+    "@angular/localize": "^14.0.0"
   }
 }
