--- a/package.json
+++ b/package.json
@@ -15,7 +15,26 @@
     "openai": "^3.1.0",
     "swagger-ui-express": "^4.6.0",
     "uuid": "^9.0.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "@angular/animations": "^14.2.12",
+    "@angular/cdk": "^14.2.7",
+    "@angular/common": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "@angular/forms": "^14.0.0",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/router": "^14.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.10.2",
+    "ngx-lightbox": "^3.0.0",
+    "ngx-toastr": "^15.2.2",
+    "placeholder-loading": "^0.6.0",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
