--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "openai": "^3.1.0",
     "swagger-ui-express": "^4.6.0",
     "uuid": "^9.0.0",
-    "typescript": "^4.9.4",
     "@angular/animations": "^14.2.12",
     "@angular/cdk": "^14.2.7",
     "@angular/common": "^14.0.0",
@@ -46,6 +45,7 @@
     "@angular-devkit/build-angular": "^14.0.6",
     "@angular/cli": "~14.0.6",
     "@angular/compiler-cli": "^14.0.0",
-    "@angular/localize": "^14.0.0"
+    "@angular/localize": "^14.0.0",
+    "typescript": "~4.7.2"
   }
 }
