--- a/package.json
+++ b/package.json
@@ -1,51 +1,11 @@
 {
   "name": "VIA-image-generator",
   "scripts": {
-    "build": "npm install && cd Backend && tsc && cd .. &&  cd Frontend && npm run build ",
+    "build-fe": "cd Frontend && npm run build ",
+    "build": "npm install && cd Backend && npm install && tsc && cd .. && cp -a /Backend/node_modules/. /node_modules/",
     "start": "node build/index.js"
   },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "express-sslify": "1.2.0",
-    "helmet": "6.0.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongodb": "4.12.0",
-    "openai": "^3.1.0",
-    "swagger-ui-express": "^4.6.0",
-    "uuid": "^9.0.0",
-    "@angular/animations": "^14.2.12",
-    "@angular/cdk": "^14.2.7",
-    "@angular/common": "^14.0.0",
-    "@angular/compiler": "^14.0.0",
-    "@angular/core": "^14.0.0",
-    "@angular/forms": "^14.0.0",
-    "@angular/platform-browser": "^14.0.0",
-    "@angular/platform-browser-dynamic": "^14.0.0",
-    "@angular/router": "^14.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
-    "@popperjs/core": "^2.10.2",
-    "bootstrap": "^5.2.0",
-    "bootstrap-icons": "^1.10.2",
-    "ngx-lightbox": "^3.0.0",
-    "ngx-toastr": "^15.2.2",
-    "placeholder-loading": "^0.6.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
-  },
   "devDependencies": {
-    "@types/express": "^4.17.15",
-    "@types/node": "^18.11.9",
-    "nodemon": "2.0.20",
-    "ts-node": "10.9.1",
-    "tslint": "6.1.3",
-    "typings": "^2.1.1",
-    "@angular-devkit/build-angular": "^14.0.6",
-    "@angular/cli": "~14.0.6",
-    "@angular/compiler-cli": "^14.0.0",
-    "@angular/localize": "^14.0.0",
-    "typescript": "~4.7.2"
+    "typescript": "^4.9.4"
   }
 }
