--- a/package.json
+++ b/package.json
@@ -5,7 +5,24 @@
     "build": "npm install && cd Backend && npm install && tsc && cd .. && cp -R /Backend/node_modules/* /node_modules",
     "start": "node build/index.js"
   },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-sslify": "1.2.0",
+    "helmet": "6.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "4.12.0",
+    "openai": "^3.1.0",
+    "swagger-ui-express": "^4.6.0",
+    "uuid": "^9.0.0"
+  },
   "devDependencies": {
-    "typescript": "^4.9.4"
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.9",
+    "nodemon": "2.0.20",
+    "ts-node": "10.9.1",
+    "tslint": "6.1.3",
+    "typescript": "^4.7.2"
   }
 }
