--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "VIA-image-generator",
   "scripts": {
     "build-fe": "cd Frontend && npm run build ",
-    "build": "npm install && cd Backend && npm install && tsc && cd .. && cp -R /Backend/node_modules/* /node_modules",
+    "build": "npm install && cd Backend && tsc && cd ..",
     "start": "node build/index.js"
   },
   "dependencies": {
