--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.10.2",
     "ngx-lightbox": "^3.0.0",
+    "ngx-spinner": "^14.0.0",
     "ngx-toastr": "^15.2.2",
     "placeholder-loading": "^0.6.0",
     "rxjs": "~7.5.0",
