--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-docker": "ng build --configuration docker",
     "dev": "ng serve",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
